[package]
name = "wireguard_converted_nekoray_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.5"
base64 = "0.13"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]